--- a/ProyectoPersonal/ProyectoPersonal.csproj
+++ b/ProyectoPersonal/ProyectoPersonal.csproj
@@ -306,6 +306,30 @@
     <Compile Include="Migrations\201712051440063_cambios generales.Designer.cs">
       <DependentUpon>201712051440063_cambios generales.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712051534585_tarifa Manufactura.cs" />
+    <Compile Include="Migrations\201712051534585_tarifa Manufactura.Designer.cs">
+      <DependentUpon>201712051534585_tarifa Manufactura.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712052038256_se agrego Formato Seleccionado a Catalogo.cs" />
+    <Compile Include="Migrations\201712052038256_se agrego Formato Seleccionado a Catalogo.Designer.cs">
+      <DependentUpon>201712052038256_se agrego Formato Seleccionado a Catalogo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712072048485_Campos Standar.cs" />
+    <Compile Include="Migrations\201712072048485_Campos Standar.Designer.cs">
+      <DependentUpon>201712072048485_Campos Standar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712111609323_Se cambio a catalogo de Embalaje.cs" />
+    <Compile Include="Migrations\201712111609323_Se cambio a catalogo de Embalaje.Designer.cs">
+      <DependentUpon>201712111609323_Se cambio a catalogo de Embalaje.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712121457216_cambios en Catalogo para automatizar el sistema.cs" />
+    <Compile Include="Migrations\201712121457216_cambios en Catalogo para automatizar el sistema.Designer.cs">
+      <DependentUpon>201712121457216_cambios en Catalogo para automatizar el sistema.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712121647368_cambios.cs" />
+    <Compile Include="Migrations\201712121647368_cambios.Designer.cs">
+      <DependentUpon>201712121647368_cambios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Cotizador\Doblez.cs" />
@@ -402,6 +426,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\printThis.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Template\isotope.pkgd.min.js" />
@@ -600,6 +625,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712051440063_cambios generales.resx">
       <DependentUpon>201712051440063_cambios generales.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712051534585_tarifa Manufactura.resx">
+      <DependentUpon>201712051534585_tarifa Manufactura.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712052038256_se agrego Formato Seleccionado a Catalogo.resx">
+      <DependentUpon>201712052038256_se agrego Formato Seleccionado a Catalogo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712072048485_Campos Standar.resx">
+      <DependentUpon>201712072048485_Campos Standar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712111609323_Se cambio a catalogo de Embalaje.resx">
+      <DependentUpon>201712111609323_Se cambio a catalogo de Embalaje.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712121457216_cambios en Catalogo para automatizar el sistema.resx">
+      <DependentUpon>201712121457216_cambios en Catalogo para automatizar el sistema.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712121647368_cambios.resx">
+      <DependentUpon>201712121647368_cambios.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
