--- a/SolicitudCotizador/SolicitudCotizador.csproj
+++ b/SolicitudCotizador/SolicitudCotizador.csproj
@@ -222,6 +222,10 @@
     <Compile Include="Migrations\201711081219534_cambios.Designer.cs">
       <DependentUpon>201711081219534_cambios.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712121952571_Cambios en la proceso.cs" />
+    <Compile Include="Migrations\201712121952571_Cambios en la proceso.Designer.cs">
+      <DependentUpon>201712121952571_Cambios en la proceso.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Cliente.cs" />
@@ -337,6 +341,8 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -433,6 +439,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711081219534_cambios.resx">
       <DependentUpon>201711081219534_cambios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712121952571_Cambios en la proceso.resx">
+      <DependentUpon>201712121952571_Cambios en la proceso.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
