--- a/ProyectoPersonal/ProyectoPersonal.csproj
+++ b/ProyectoPersonal/ProyectoPersonal.csproj
@@ -330,6 +330,10 @@
     <Compile Include="Migrations\201712121647368_cambios.Designer.cs">
       <DependentUpon>201712121647368_cambios.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712181849565_Se agrega Produccion.cs" />
+    <Compile Include="Migrations\201712181849565_Se agrega Produccion.Designer.cs">
+      <DependentUpon>201712181849565_Se agrega Produccion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Cotizador\Doblez.cs" />
@@ -344,6 +348,7 @@
     <Compile Include="Models\Cotizador\Presupuesto.cs" />
     <Compile Include="Models\Cotizador\Presupuesto_SubProceso.cs" />
     <Compile Include="Models\Cotizador\Proceso.cs" />
+    <Compile Include="Models\Cotizador\Produccion.cs" />
     <Compile Include="Models\Cotizador\SubProceso.cs" />
     <Compile Include="Models\Cotizador\Tapa.cs" />
     <Compile Include="Models\Cotizador\Terminacion.cs" />
@@ -564,7 +569,6 @@
     <Content Include="Views\Formato\Edit.cshtml" />
     <Content Include="Views\Formato\Index.cshtml" />
     <Content Include="Views\Presupuesto\ReajustePPTO.cshtml" />
-    <Content Include="Views\Presupuesto\View2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -643,6 +647,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712121647368_cambios.resx">
       <DependentUpon>201712121647368_cambios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712181849565_Se agrega Produccion.resx">
+      <DependentUpon>201712181849565_Se agrega Produccion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
