--- a/ProyectoPersonal/ProyectoPersonal.csproj
+++ b/ProyectoPersonal/ProyectoPersonal.csproj
@@ -590,6 +590,7 @@
     <Content Include="Views\Presupuesto\_Test.cshtml" />
     <Content Include="Views\Presupuesto\View.cshtml" />
     <Content Include="Views\Moneda\_View.cshtml" />
+    <Content Include="Views\Presupuesto\Nuevo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
