--- a/ProyectoPersonal/ProyectoPersonal.csproj
+++ b/ProyectoPersonal/ProyectoPersonal.csproj
@@ -100,6 +100,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -345,6 +346,10 @@
     <Compile Include="Migrations\201802131513286_cambio a servidor de prueba.cs" />
     <Compile Include="Migrations\201802131513286_cambio a servidor de prueba.Designer.cs">
       <DependentUpon>201802131513286_cambio a servidor de prueba.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802161322594_Agregue campo estado al presupuesto.cs" />
+    <Compile Include="Migrations\201802161322594_Agregue campo estado al presupuesto.Designer.cs">
+      <DependentUpon>201802161322594_Agregue campo estado al presupuesto.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -596,6 +601,7 @@
     <Content Include="Views\Presupuesto\View.cshtml" />
     <Content Include="Views\Moneda\_View.cshtml" />
     <Content Include="Views\Presupuesto\Nuevo.cshtml" />
+    <Content Include="Views\Presupuesto\Nuevo2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -687,6 +693,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802131513286_cambio a servidor de prueba.resx">
       <DependentUpon>201802131513286_cambio a servidor de prueba.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802161322594_Agregue campo estado al presupuesto.resx">
+      <DependentUpon>201802161322594_Agregue campo estado al presupuesto.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
