--- a/ProyectoPersonal/ProyectoPersonal.csproj
+++ b/ProyectoPersonal/ProyectoPersonal.csproj
@@ -622,6 +622,7 @@
     <Content Include="Views\Moneda\_View.cshtml" />
     <Content Include="Views\Presupuesto\Nuevo.cshtml" />
     <Content Include="Views\Presupuesto\Nuevo2.cshtml" />
+    <Content Include="Views\Presupuesto\Modificar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
